--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div id="list-panel">
+        <ul id="list">
+        
+        </ul>
+    </div>
+
+   <div id="show-panel">
+		
+	</div>
     
 </body>
-<script src="index.js"></script>
+<script src="./js/index.js"></script>
 </html>
