--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <div class="container" id="form-container">
+        <form id="add-game-form" style="">
+          <h3>Add a New Game</h3>
+  
+          <input type="text" name="title" value="" placeholder="Enter a game's title..." class="input-text">
+          <br>
+          <input type="text" name="image" value="" placeholder="Enter a game's image URL..." class="input-text">
+          <br>
+          <input type="text" name="release-year" value="" placeholder="Enter a game's release year..." class="input-text">
+          <br>
+          <input type="text" name="genre" value="" placeholder="Enter a game's genre..." class="input-text">
+          <br>
+          <input type="submit" name="submit" value="Create New Game" class="submit">
+        </form>
+    </div>
+    <p style='text-align:center' >Have a new game you'd like to add to our database? <button id='new-game-btn'>Add a new game!</button></p>
     <div id="list-panel">
         <ul id="list">
         
