update card for games

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+ <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
+   
     <div class="container" id="form-container">
         <form id="add-game-form" style="">
           <h3>Add a New Game</h3>
@@ -27,14 +28,12 @@
     <p style='text-align:center' >Have a new game you'd like to add to our database? <button id='new-game-btn'>Add a new game!</button></p>
     <div id="list-panel">
         <ul id="list">
-        
         </ul>
     </div>
-
-   <div id="show-panel">
-		
-	</div>
-    
+ <div id="show-panel">  
 </body>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="./js/index.js"></script>
+</div>
 </html>
+
