worked on new game form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 style="text-align:center">Project Homepage</h1>
     <p style='text-align:center' >Have a new game you'd like to add to our database? <button id='new-game-btn'>Add a new game!</button></p>
     <div class="container" id="form-container">
-        <form id="add-game-form" style="">
+        <!-- <form id="add-game-form" style="">
           <h3>Add a New Game</h3>
   
           <input type="text" name="title" value="" placeholder="Enter a game's title..." class="input-text">
@@ -24,17 +24,18 @@
           <input type="text" name="genre" value="" placeholder="Enter a game's genre..." class="input-text">
           <br>
           <input type="submit" name="submit" value="Create New Game" class="submit">
-        </form>
+        </form> -->
     </div>
     
     <div id="list-panel">
         <ul id="list">
         </ul>
     </div>
- <div id="show-panel">  
-</body>
+    <div id="show-panel">  
+    </div>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="./js/index.js"></script>
-</div>
+
+</body>
 </html>
 
